5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1644_2447.log
== TEST (2019-04-11 21:52:08) 
-- CODE:
X = float(input("digite o preço: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta" + x-y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("falta" + x-y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:52:14) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta" + x-y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("falta" + x-y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:52:31) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta" + X-Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("falta" + X-Y)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:52:46) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta", + X-Y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:52:50) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta", + X-Y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:54:11) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta ", + X-Y)
else:
	print("troco de ", + Y-X)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:54:13) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta ", + X-Y)
else:
	print("troco de ", + Y-X)
-- EXECUTION TIME:
0.202954
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:54:15) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta ", + X-Y)
else:
	print("troco de ", + Y-X)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:54:26) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta ", + X-Y)
else:
	print("troco de ", + Y-X)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:54:48) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta ",X-Y)
else:
	print("troco de ",Y-X)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:54:53) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta ",X-Y)
else:
	print("troco de ",Y-X)
-- EXECUTION TIME:
0.161603
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:54:57) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",X-Y)
else:
	print("troco de",Y-X)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:55:01) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",X-Y)
else:
	print("troco de",Y-X)
-- EXECUTION TIME:
0.175747
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:55:03) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",X-Y)
else:
	print("troco de",Y-X)
-- EXECUTION TIME:
0.134237
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:55:04) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",X-Y)
else:
	print("troco de",Y-X)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:55:23) 
-- CODE:
X = float(input())
Y = float(input())


if X > Y:
	print("falta",X-Y)
else:
	print("troco de",Y-X)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:55:25) 
-- CODE:
X = float(input())
Y = float(input())


if X > Y:
	print("falta",X-Y)
else:
	print("troco de",Y-X)
-- EXECUTION TIME:
0.163594
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:55:26) 
-- CODE:
X = float(input())
Y = float(input())


if X > Y:
	print("falta",X-Y)
else:
	print("troco de",Y-X)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:55:30) 
-- CODE:
X = float(input())
Y = float(input())

if X > Y:
	print("falta",X-Y)
else:
	print("troco de",Y-X)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:56:13) 
-- CODE:
X = float(input())
Y = float(input())

if X > Y:
	print("falta",round(X-Y),2)
else:
	print("troco de",round(Y-X),2)
-- EXECUTION TIME:
0.30562
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26 2
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28 2
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:56:14) 
-- CODE:
X = float(input())
Y = float(input())

if X > Y:
	print("falta",round(X-Y),2)
else:
	print("troco de",round(Y-X),2)
-- OUTPUT:
falta 26 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:57:17) 
-- CODE:
X = float(input())
Y = float(input())

if X > Y:
	print("falta",(round (X-Y,2)))
else:
	print("troco de",(round (Y-X,2)))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:57:22) 
-- CODE:
X = float(input())
Y = float(input())

if X > Y:
	print("falta",(round (X-Y,2)))
else:
	print("troco de",(round (Y-X,2)))
-- EXECUTION TIME:
0.137928
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:57:23) 
-- CODE:
X = float(input())
Y = float(input())

if X > Y:
	print("falta",(round (X-Y,2)))
else:
	print("troco de",(round (Y-X,2)))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:57:29) 
-- CODE:
X = float(input())
Y = float(input())

if X > Y:
	print("falta",(round (X-Y,2)))
else:
	print("troco de",(round (Y-X,2)))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:57:30) 
-- CODE:
X = float(input())
Y = float(input())

if X > Y:
	print("falta",(round (X-Y,2)))
else:
	print("troco de",(round (Y-X,2)))
-- EXECUTION TIME:
0.144925
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:57:55) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",(round (X-Y,2)))
else:
	print("troco de",(round (Y-X,2)))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:57:58) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",(round (X-Y,2)))
else:
	print("troco de",(round (Y-X,2)))
-- EXECUTION TIME:
0.159039
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:58:03) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",(round (X-Y,1)))
else:
	print("troco de",(round (Y-X,1)))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:58:05) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",(round (X-Y,1)))
else:
	print("troco de",(round (Y-X,1)))
-- EXECUTION TIME:
0.244332
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:58:06) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("falta",(round (X-Y,1)))
else:
	print("troco de",(round (Y-X,1)))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:58:29) 
-- CODE:
X = float(input("digite o preco: "))
Y = float(input("digite o valor do pagamento: "))


if X > Y:
	print("Falta",(round (X-Y,1)))
else:
	print("Troco de",(round (Y-X,1)))
-- EXECUTION TIME:
0.180185
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
